Added auth store module, changed vue middlewares, configured airlock.

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,11 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=cookie
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=.localhost
+AIRLOCK_STATEFUL_DOMAINS="localhost"
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
