--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "laravelcollective/html": "^6.1"
-      "ext-pdo": "*"
+        "laravelcollective/html": "^6.1",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
