--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "vue-draggable-nested-tree": "^3.0.0-beta2",
     "vue-fragment": "^1.5.1",
+    "vue-nestable": "^2.5.2",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   }
