--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-fragment": "^1.5.1",
     "vue-nestable": "^2.5.2",
     "vue-router": "^3.1.6",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.1.3"
   }
 }
