--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "laravel-mix": "^5.0.1",
     "lodash": "^4.17.13",
     "popper.js": "^1.12",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.20.1",
     "sass-loader": "^8.0.0",
@@ -27,6 +29,7 @@
   },
   "dependencies": {
     "slug-generator": "^1.0.6",
+    "tailwindcss": "^1.2.0",
     "vue-fragment": "^1.5.1",
     "vue-nestable": "^2.5.2",
     "vue-router": "^3.1.6",
