--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "glob-all": "^3.2.1",
     "slug-generator": "^1.0.6",
     "tailwindcss": "^1.2.0",
     "vue-fragment": "^1.5.1",
