--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "ext-pdo": "*",
         "barryvdh/laravel-ide-helper": "^2.6",
+        "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "laravelcollective/html": "^6.1",
-        "ext-json": "*"
+        "laravelcollective/html": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
